--- a/index.html
+++ b/index.html
@@ -131,26 +131,26 @@
             <div class="cards-section">
               <img class="img1" src="./images/icon-quotes.svg" alt="" />
               <p class="p-1">
-                “The team perfectly fit the specialized skill set <br />
-                required. They focused on the most essential <br />
-                features helping us launch the platform eight <br />
-                months faster than planned.”
+                “We needed to automate our entire onboarding <br />process. The
+                team came in and built out the <br />
+                whole journey. Since going live, user retention <br />
+                has gone through the roof!”
               </p>
-              <h3 class="h3">Kady Baker</h3>
-              <p class="p-2">Product Manager at Bookmark</p>
-              <img class="image2" src="./images/kady.svg" alt="" />
+              <h3 class="h3">Aiysha Reese</h3>
+              <p class="p-2">Founder of Manage</p>
+              <img class="image2" src="./images/aisha.svg" alt="" />
             </div>
             <div class="cards-section">
               <img class="img1" src="./images/icon-quotes.svg" alt="" />
               <p class="p-1">
-                “The team perfectly fit the specialized skill set <br />
-                required. They focused on the most essential <br />
-                features helping us launch the platform eight <br />
-                months faster than planned.”
+                “Amazing. Our team helped us build an app that <br />
+                delivered a new experience for hiring a physio. <br />
+                The launch was an instant success with 100k <br />
+                downloads in the first month.”
               </p>
-              <h3 class="h3">Kady Baker</h3>
-              <p class="p-2">Product Manager at Bookmark</p>
-              <img class="image2" src="./images/kady.svg" alt="" />
+              <h3 class="h3">Arthur Clarke</h3>
+              <p class="p-2">Co-founder of MyPhysio</p>
+              <img class="image2" src="./images/arthur (1).svg" alt="" />
             </div>
           </div>
         </div>
@@ -158,7 +158,7 @@
       <section class="section3__container">
         <div class="container section3__container">
           <h1 class="h1-2">Ready to get started?</h1>
-          <button class="button12">contact us</button>
+          <a href="./pages/input.html" class="button12">contact us</a>
         </div>
       </section>
     </main>
@@ -170,9 +170,11 @@
           </div>
           <div class="div23 hkd">
             <ul>
-              <li><a href="./index.html">home</a></li>
               <li>
-                <a href=".//pages/apaut.html">about </a>
+                <a href="./index.html">home</a>
+              </li>
+              <li>
+                <a href="./pages/abaut.html">about </a>
               </li>
             </ul>
           </div>
