--- a/pages/abaut.html
+++ b/pages/abaut.html
@@ -148,7 +148,7 @@
       <section class="section3__container">
         <div class="container section3__container">
           <h1 class="h1-2">Ready to get started?</h1>
-          <a href="" class="button2">contact us</a>
+          <a href="./input.html" class="button2">contact us</a>
         </div>
       </section>
     </main>
